# broken2

./: CMakeLists.txt
.github/workflows/: release.yml
src/: AdvancedEffects.cpp  AdvancedEffects.h  DestructiveActions.cpp  DestructiveActions.h  Utilities.cpp  Utilities.h  VisualEffects.cpp  VisualEffects.h  main.cpp
